--- a/home/index.html
+++ b/home/index.html
@@ -16,19 +16,7 @@
 </div>
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
-<script>
-  const app = Vue.createApp({
-   data() {
-    return {
-     message: "Hello classmates!"
-    }
-   }
-  })
-  
-  app.mount('#app')
-
-</script>
+<script src="js/vue.js"></script>
 
 </body>
 </html>
