--- a/home/index.html
+++ b/home/index.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css?version=0.2"/>
+    <link rel="stylesheet" href="css/pink.css?version=0.1">
+ 
   <style>
     
   </style>
@@ -75,6 +77,8 @@
 <div id="app">
   {{ message }} <br>
   {{'Random number: ' + Math.ceil(Math.random()*6) }}
+  
+  <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.</div>
 </div>
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
