--- a/home/index.html
+++ b/home/index.html
@@ -8,6 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css?version=0.2"/>
       <link rel="stylesheet" href="css/pink.css?version=0.1">
+      <link rel="stylesheet" href="css/images.css?version=0.1">
+
  
   <style>
     
@@ -81,8 +83,17 @@
   <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.</div>
 </div>
 
+<div id="app2">
+  <div>
+    <figure v-for="x in manyFoods">
+      <img v-bind:src="x.url">
+      <figcaption>{{ x.name }}</figcaption>
+  </figure>
+</div>
+
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="js/vue.js"></script>
+<script src="js/images.js"></script>
 
 </body>
 </html>
