--- a/home/index.html
+++ b/home/index.html
@@ -139,7 +139,7 @@
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/images.js"></script>
-<script src="js.shopping.js"></script>
+<script src="js/shopping.js"></script>
 
 </body>
 </html>
