--- a/home/index.html
+++ b/home/index.html
@@ -89,8 +89,9 @@
       <img v-bind:src="x.url">
       <figcaption>{{ x.name }}</figcaption>
   </figure>
+  </div>
 </div>
-
+  
 <div id="app3">
   <form v-on:submit.prevent="addItem">
     <p>
